--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -22,18 +22,26 @@
 .text-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 20px;
+
 }
 
-.title {
-  height: 10vw;
-  width: auto;
-  margin-top: 20px;
-  margin-bottom: -40px;
-  align-self: center;
+.about-us {
+  font-size: 3rem;
+	align-self: center;
+	justify-self: center;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: Oswald;
+	font-weight: bolder;
+	text-shadow: -4px 0 #eedf5b;
+	color: #b95c77;
+	padding: 2rem;
 }
 
 .text {
-  margin: 60px;
+  
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.5vw;
