--- a/front-end/src/components/Home/Home.css
+++ b/front-end/src/components/Home/Home.css
@@ -71,17 +71,20 @@ span {
 
 	.mobile-intro {
 		display: grid;
-		text-align: center;
+		text-align: justify;
 		padding: 0px 20px 20px 20px;
 		font-size: 13px;
 		font-size: 17px;
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+		font-weight: 300px;
 	}
 
 	.play-now {
 		display: grid;
 		border-radius: 2rem;
-		width: 150px;
-		height: 35px;
+		width: 153px;
+		height: 39px;
 		background-color: #efedea;
 		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -91,7 +94,9 @@ span {
 		box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
 		transition: all 0.3s ease 0s;
 		cursor: pointer;
-		padding: 10px;
+		padding: 8.5px;
 		margin: 20px;
+		text-align: center;
+	
 	}
 }
