--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -1,9 +1,9 @@
-.page-wrapper {
+.intro-page-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /* justify-content: center; */
   min-height: 100vh;
+  background-image: url("https://res.cloudinary.com/octavian2111/image/upload/v1620122941/25ehEmx_rfvxwu.jpg");
 }
 
 .game-intro-title {
@@ -85,7 +85,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .page-wrapper {
+  .intro-page-wrapper {
     display: flex;
     flex-direction: column;
   }
