--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -6,7 +6,6 @@
   grid-template-columns: auto;
   /* margin: 2.5rem; */
   text-align: -webkit-center;
-  margin-right: 15px;
 }
 
 .Game-header {
@@ -53,11 +52,12 @@
   border-color: #eedf5b;
   border-width: 5px;
   border-style: solid;
-  margin-bottom: 15px;
-  margin-left: 15px;
+  /* margin-bottom: 15px;
+  margin-left: 15px; */
   width: 80px;
   box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  margin: 10px;
 }
 
 .Matched {
