--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -130,6 +130,7 @@ textarea {
   display: flex;
   justify-self: center;
   justify-content: center;
+  padding: 2px;
 }
 .button-contact:hover {
   background-color: #eedf5b;
@@ -210,7 +211,7 @@ textarea {
     justify-items: center;
     padding: 16px;
     font-size: 1rem;
-    text-align: center;
+    text-align: left;
     width: 300px;
     height: 1em;
 
